# diff-drive-aruco-ros2

./: .gitignore  README.md  clean_restart.sh  frames_2026-06-17_15.52.00.gv  install_deps.sh  run_all.sh  run_nav.sh  tf_jump_detector.py
src/diffbot_slam/: package.xml  setup.cfg  setup.py
src/diffbot_slam/config/: fastdds_no_shm.xml  nav2_params.yaml  rviz_config.rviz  slam_toolbox_params.yaml
src/diffbot_slam/diffbot_slam/: __init__.py  aruco_command_follower.py  aruco_detector.py
src/diffbot_slam/launch/: navigation.launch.py  simulation.launch.py  slam.launch.py
src/diffbot_slam/maps/: my_map.pgm  my_map.yaml
src/diffbot_slam/models/aruco_marker/: model.config  model.sdf
src/diffbot_slam/models/aruco_marker_1/: model.config  model.sdf
src/diffbot_slam/models/aruco_marker_1/materials/scripts/: aruco_marker_1.material
src/diffbot_slam/models/aruco_marker_2/: model.config  model.sdf
src/diffbot_slam/models/aruco_marker_2/materials/scripts/: aruco_marker_2.material
src/diffbot_slam/models/aruco_marker_3/: model.config  model.sdf
src/diffbot_slam/models/aruco_marker_3/materials/scripts/: aruco_marker_3.material
src/diffbot_slam/models/aruco_marker_4/: model.config  model.sdf
src/diffbot_slam/models/aruco_marker_4/materials/scripts/: aruco_marker_4.material
src/diffbot_slam/urdf/: diffbot.urdf.xacro
src/diffbot_slam/worlds/: aruco_world.world
