<?xml version="1.0"?>
<package format="3">
  <name>diffbot_slam</name>
  <version>1.0.0</version>
  <description>Differential drive robot simulation with ArUco markers + SLAM Toolbox</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>gazebo_ros</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
